@@ -47,6 +47,8 @@ Release 0.20.1 - Unreleased
    HBASE-1854  Remove the Region Historian
    HBASE-1860  Change HTablePool#createHTable from private to protected
    HBASE-48    Bulk load tools
+   HBASE-1855  HMaster web application doesn't show the region end key in the
+               table detail page (Andrei Dragomir via Stack)
 
 Release 0.20.0 - Tue Sep  8 12:48:41 PDT 2009
 
